Fixed an issue regarding the "About" page displaying incorrectly on mobile devices

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -299,7 +299,9 @@ textarea[type="text"] {
 
     .popup-content {
         text-align: center;
-        min-width:612px;
+        overflow:auto;
+        max-height:200px;
+        max-width:100vw;
         color:var(--secondary);
 
     }
